# dicognito

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  build.ps1  duties.py  how_to_build.md  mypy.ini  pyproject.toml  release_notes.md  setup.py  tasks.py  test.py  tox.ini
.github/: test.yml
.github/workflows/: build.yml  test.yml
assets/: build-icons.ps1  build_icons.py
build_tools/: test.ps1
dicognito/: __init__.py  __main__.py  addressanonymizer.py  anonymizer.py  datetimeanonymizer.py  equipmentanonymizer.py  fixedvalueanonymizer.py  idanonymizer.py  pnanonymizer.py  randomizer.py  uianonymizer.py  unwantedelements.py
dicognito/tests/: data_for_tests.py  test_anonymize_one_patient_two_studies.py  test_anonymize_one_series_two_instances.py  test_anonymize_one_study_two_serieses.py  test_anonymize_single_instance.py  test_anonymize_two_patients.py  test_id_affixes.py  test_style.py
smoketest/: smoketest.py
src/dicognito/: __init__.py  __main__.py  _config.py  _version.py  addressanonymizer.py  anonymizer.py  burnedinannotationguard.py  burnedinannotationwarner.py  dataset_updater.py  datetimeanonymizer.py  element_anonymizer.py  equipmentanonymizer.py  exceptions.py  filters.py  fixedvalueanonymizer.py  idanonymizer.py  pipeline.py  pnanonymizer.py  randomizer.py  release_notes.md  summary.py  uianonymizer.py  unwantedelements.py  value_keeper.py
tests/: data_for_tests.py  test_anonymize_one_patient_two_studies.py  test_anonymize_one_series_two_instances.py  test_anonymize_one_study_two_serieses.py  test_anonymize_private_tags.py  test_anonymize_single_instance.py  test_anonymize_through_time.py  test_anonymize_two_patients.py  test_burned_in_annotation_warnings.py  test_commandline.py  test_element_handlers.py  test_id_affixes.py  test_readme.py  test_style.py  test_summary.py
tests/data/test_summary_mixed_files_reports_on_each_study/: orig_p01_s01_s01_i01.dcm  orig_p02_s02_s01_i01.dcm  p01_s01_s01_i02.dcm
tests/data/test_summary_with_quiet_no_report/: p02_s01_s01_i01.dcm
tests/orig_data/test_burned_in_annotation_if_yes/: burned_in_yes.dcm
tests/orig_data/test_burned_in_annotation_never/: burned_in_no.dcm  burned_in_other.dcm
tests/orig_data/test_burned_in_warning_logged_at_warning/: p01_s01_s01_i01.dcm
tests/orig_data/test_conversion_error_logs_filename_and_error_type/: bad.dcm
tests/orig_data/test_directory_is_recursed/a/b/: p01_s02_s01_i01.dcm
tests/orig_data/test_keeps_elements_specified_by_tag/: p01_s01_s01_i01.dcm
tests/orig_data/test_mitra_global_patient_id_is_updated/: global_patient_id_implicit_vr.dcm
tests/orig_data/test_summary_mixed_files_reports_on_each_study/: p01_s01_s01_i02.dcm
tests/orig_data/test_summary_no_accession_number/: p01_s01_s01_i01.dcm
tests/orig_data/test_summary_with_quiet_no_report/: p02_s01_s01_i01.dcm  p02_s02_s01_i01.dcm
tests/orig_data/test_writes_deflated_file_correctly/: CT_small_deflated.dcm
tools/: deploy.ps1  gather-release-info-for-github-actions.py  release-version.ps1  release-version.py  test.ps1
